--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Document</title>
-	<!-- <link rel="stylesheet" type="text/css" href="../../onescreen/OneScreen/Client/S/app/css/main.css"> -->
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="../../onescreen/OneScreen/Client/S/app/css/main.css">
+	<!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 		 
 	<style type="text/css">
 		body {
@@ -31,7 +31,7 @@
 <div id="main" class="container--main">
 	<div class="terminal-block terminal-block--cover terminal-block--cover-carousel container--wide trailer--large">
 		
-		<div class="container carousel carousel--loop" data-component="carousel" data-loop="true" data-auto-play="5000" data-duration="1000" data-visible-slides="1">
+		<div class="container carousel carousel--loop" data-component="carousel" data-loop="true"  data-duration="1000" data-visible-slides="1">
 			<button class="carousel__prev" href="#" data-alias="btnPrev" data-component="button"><i class="icon-arrow-prev"></i></button>
 			
 			<div class="carousel__holder" data-element="carouselHolder">
@@ -43,9 +43,9 @@
 								<img src="carousel-beoplay-image.png" alt="">
 							</div>
 							<div class="col-lg-5 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
-								<div class="description padding-trailer--xxlarge tabletp-padding-trailer--none">
+								<div class="description padding-trailer--xxlarge">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
-									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
+									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
@@ -64,7 +64,7 @@
 								<img src="carousel-ipad-image.png" alt="">
 							</div>
 							<div class="col-lg-5 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
-								<div class="description padding-trailer--xxlarge tabletp-padding-trailer--none">
+								<div class="description padding-trailer--xxlarge">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
@@ -85,7 +85,7 @@
 								<img src="carousel-beoplay-image.png" alt="">
 							</div>
 							<div class="col-lg-5 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
-								<div class="description padding-trailer--xxlarge tabletp-padding-trailer--none">
+								<div class="description padding-trailer--xxlarge">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
@@ -106,7 +106,7 @@
 								<img src="carousel-ipad-image.png" alt="">
 							</div>
 							<div class="col-lg-5 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
-								<div class="description padding-trailer--xxlarge tabletp-padding-trailer--none">
+								<div class="description padding-trailer--xxlarge">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
