--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@
 		<div class="grid-row--gutter-small">
 			<div class="col-xs-12 ups-block ups-block--small text--center grid-row--gutter-none trailer padding-whole--section padding-trailer--section-base ">
 				<div class="col-xs-12 trailer--section mobile-trailer--xlarge">
-					<p class="teaser text-caps text-size--13 trailer--xsmall">Block with 3 USP’s</p>
-					<h2 class="text-light text-size--48 mobile-text-size--28 trairel--med mobile-trailer--small">Masser af nye features</h2>
+					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 3 USP’s</p>
+					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="description">
 						<p>Teaser text</p>
 					</div>
@@ -837,8 +837,8 @@
 		
 			<div class="col-xs-12 ups-block ups-block--medium text--center grid-row--gutter-none trailer padding-whole--section padding-trailer--section-base ">
 				<div class="col-xs-12 trailer--section mobile-trailer--xlarge">
-					<p class="teaser text-caps text-size--13 trailer--xsmall">Block with 4 USP’s</p>
-					<h2 class="text-light text-size--48 mobile-text-size--28 trairel--med mobile-trailer--small">Masser af nye features</h2>
+					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 4 USP’s</p>
+					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="description">
 						<p>Teaser text</p>
 					</div>
@@ -881,8 +881,8 @@
 		
 			<div class="col-xs-12 ups-block ups-block--large text--center grid-row--gutter-none trailer padding-whole--section padding-trailer--section-base ">
 				<div class="col-xs-12 trailer--section mobile-trailer--xlarge">
-					<p class="teaser text-caps text-size--13 trailer--xsmall">Block with 6 USP’s</p>
-					<h2 class="text-light text-size--48 mobile-text-size--28 trairel--med mobile-trailer--small">Masser af nye features</h2>
+					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 6 USP’s</p>
+					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="description">
 						<p>Teaser text</p>
 					</div>
