--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -820,7 +820,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -828,7 +828,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -848,7 +848,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -856,7 +856,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -864,7 +864,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -872,7 +872,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -892,7 +892,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -900,7 +900,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -908,7 +908,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -916,7 +916,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -924,7 +924,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
@@ -932,7 +932,7 @@
 						<div class="icon-holder trailer">
 							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
 						</div>
-						<h3 class="text-bold text-size--16 trailer--small">USP headline</h3>
+						<h3 class="text-bold text-size--16 trailer--xsmall">USP headline</h3>
 						<p class="text-size--16 mobile-text-size--13 trailer--med">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening.</p>
 						<a class="text-size--16 mobile-text-size--13" href="#">This is a link</a>
 					</div>
