--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 3 USP’s</p>
 					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="description">
-						<p>Teaser text</p>
+						<p class="font-roboto">Teaser text</p>
 					</div>
 				</div>
 				<div class="grid-row--gutter-large grid-row-md--center">
@@ -840,7 +840,7 @@
 					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 4 USP’s</p>
 					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="description">
-						<p>Teaser text</p>
+						<p class="font-roboto">Teaser text</p>
 					</div>
 				</div>
 				<div class="grid-row">
@@ -884,7 +884,7 @@
 					<p class="teaser text-caps text-size--13 trailer--xsmall text-bold">Block with 6 USP’s</p>
 					<h2 class="text-light text-size--48 mobile-text-size--28 trailer--med mobile-trailer--small">Masser af nye features</h2>
 					<div class="description">
-						<p>Teaser text</p>
+						<p class="font-roboto">Teaser text</p>
 					</div>
 				</div>
 				<div class="grid-row">
