--- a/index.html
+++ b/index.html
@@ -1056,6 +1056,271 @@
 		
 		</div>
 	</div>
+	
+	<div class="container padding-leader padding-trailer">
+		<h1 class="text-size--38 tabletl-text-size--34 text-light">Content text block</h1>
+	</div>
+	
+	<div class="container">
+		<div class="grid-row--gutter-small">
+			<div class="col-xs-12 terminal-text-block trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none padding-whole--section padding-trailer--large mobile-padding-whole mobile-padding-leader--large mobile-padding-trailer--large">
+					<div class="col-lg-8 col-hg-7 col-md-9">
+						<div class="icon-holder trailer">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 mobile-text-size--30 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+						<p class="text-size--16 mobile-text-size--13 trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 terminal-text-block trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none grid-row-xs--center text--center padding-whole--section padding-trailer--large mobile-padding-whole mobile-padding-leader--large mobile-padding-trailer--large">
+					<div class="col-lg-8 col-hg-7 col-md-9">
+						<div class="icon-holder trailer">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 mobile-text-size--30 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+						<p class="text-size--16 mobile-text-size--13 trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 terminal-text-block terminal-text-block--without-bg trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none mobile-padding-toright mobile-padding-toleft">
+					<div class="col-lg-8 col-hg-7 col-md-9">
+						<div class="icon-holder trailer">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 mobile-text-size--30 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+						<p class="text-size--16 mobile-text-size--13 trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 terminal-text-block terminal-text-block--without-bg trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none grid-row-xs--center text--center mobile-padding-toright mobile-padding-toleft">
+					<div class="col-lg-8 col-hg-7 col-md-9">
+						<div class="icon-holder trailer">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 mobile-text-size--30 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+						<p class="text-size--16 mobile-text-size--13 trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="container padding-leader padding-trailer">
+		<h1 class="text-size--38 tabletl-text-size--34 text-light">Content text block 6/6</h1>
+	</div>
+	
+	<div class="container">
+		<div class="grid-row--gutter-small">
+			
+			<!-- text left -->
+			<div class="col-xs-12 terminal-text-block terminal-text-block--image trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none">
+					<div class="col-lg-6 padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="icon-holder trailer mobile-hidden">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+					<div class="col-lg-6 image-holder col-xs--first col-lg--ordered">
+						<img src="text-block-image.jpg" alt="image description" />
+					</div>
+				</div>
+			</div>
+			
+			<!-- text right -->
+			<div class="col-xs-12 terminal-text-block terminal-text-block--image trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none">
+					<div class="col-lg-6 padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="icon-holder trailer mobile-hidden">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+					<div class="col-lg-6 image-holder col-xs--first">
+						<img src="text-block-image.jpg" alt="image description" />
+					</div>
+				</div>
+			</div>
+			
+			<!-- text left centred content-->
+			<div class="col-xs-12 terminal-text-block terminal-text-block--image trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none">
+					<div class="col-lg-6 grid-row--gutter-none padding-toleft--section padding-toright--section tabletp-padding-whole--section padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="col-lg-12 col-lg--middle">
+							<div class="icon-holder trailer mobile-hidden">
+								<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+							</div>
+							<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+							<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+							<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+							<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+								<a href="#">This is a link</a>
+							</p>
+						</div>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+					<div class="col-lg-6 image-holder col-xs--first col-lg--ordered">
+						<img src="text-block-image.jpg" alt="image description" />
+					</div>
+				</div>
+			</div>
+			
+			<!-- text right centred content-->
+			<div class="col-xs-12 terminal-text-block terminal-text-block--image trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none">
+					<div class="col-lg-6 grid-row--gutter-none padding-toleft--section padding-toright--section tabletp-padding-whole--section padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="col-lg-12 col-lg--middle">
+							<div class="icon-holder trailer mobile-hidden">
+								<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+							</div>
+							<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+							<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+							<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display. Splash and water resistance.1 And it looks every bit as powerful as it is. This is iPhone 7.</p>
+							<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+								<a href="#">This is a link</a>
+							</p>
+						</div>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+					<div class="col-lg-6 image-holder col-xs--first">
+						<img src="text-block-image.jpg" alt="image description" />
+					</div>
+				</div>
+			</div>
+			
+		</div>
+	</div>
+	
+	<div class="container padding-leader padding-trailer">
+		<h1 class="text-size--38 tabletl-text-size--34 text-light">Content text block 4/8</h1>
+	</div>
+	
+	<div class="container">
+		<div class="grid-row--gutter-small">
+			
+			<!-- text 4 - image 8  text left -->
+			<div class="col-xs-12 terminal-text-block terminal-text-block--image trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none">
+					<div class="col-lg padding-whole--section padding-toright--xxlarge padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="icon-holder trailer mobile-hidden">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone.</p>
+						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+					<div class="col-lg-8 image-holder col-xs--first col-lg--ordered">
+						<img src="text-block-image.jpg" alt="image description" />
+					</div>
+				</div>
+			</div>
+			
+			<!-- text 4 - image 8  text right -->
+			<div class="col-xs-12 terminal-text-block terminal-text-block--image terminal-text-block--right trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none">
+					<div class="col-lg-4 padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="icon-holder trailer mobile-hidden">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone.</p>
+						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+					<div class="col-lg-8 image-holder col-xs--first">
+						<img src="text-block-image.jpg" alt="image description" />
+					</div>
+				</div>
+			</div>
+			
+			<!-- text 8 - image 4  text left -->
+			<div class="col-xs-12 terminal-text-block terminal-text-block--image trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none">
+					<div class="col-lg-8 padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="icon-holder trailer mobile-hidden">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone.</p>
+						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+					<div class="col-lg-4 image-holder col-xs--first col-lg--ordered">
+						<img src="text-block-image.jpg" alt="image description" />
+					</div>
+				</div>
+			</div>
+			
+			<!-- text 8 - image 4  text right -->
+			<div class="col-xs-12 terminal-text-block terminal-text-block--image terminal-text-block--right trailer">
+				<div class="terminal-text-block__holder grid-row--gutter-none">
+					<div class="col-lg-8 padding-whole--section padding-trailer--section tabletp-padding-trailer--large mobile-padding-whole--large mobile-padding-toleft mobile-padding-toright mobile-padding-trailer--large">
+						<div class="icon-holder trailer mobile-hidden">
+							<span class="icon icon-home-broadband color-gray-light circle-outline circle-outline text-size--38 inline-block border-width-2"></span>
+						</div>
+						<p class="text-caps text-size--13 mobile-text-size--11 trailer--xsmall text-bold">TEASER HEADER</p>
+						<h2 class="text-light text-size--44 mobile-text-size--28 trailer">Main title. Can be in two lines</h2>
+						<p class="text-size--16 mobile-text-size--13 trailer">Teaser text. iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems. The best performance and battery life ever in an iPhone.</p>
+						<p class="text-size--16 mobile-text-size--13 tabletp-trailer--section">
+							<a href="#">This is a link</a>
+						</p>
+						<p class="text-legal text-size--11 color-steel-grey">Legal text</p>
+					</div>
+					<div class="col-lg-4 image-holder col-xs--first">
+						<img src="text-block-image.jpg" alt="image description" />
+					</div>
+				</div>
+			</div>
+			
+		</div>
+	</div>
 </div>
 
 <script src="js/main.js"></script>
